stretch imgs fixed

--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ width: 100%;
 height: 100%;
 display: none;
 border-radius: 20px;
+object-fit: cover; 
 }
 #carousel img.active {
     display: block;
